# comodos

./: .gitignore  LICENSE  README  README.markdown  README.md  pyproject.toml  requisitos.txt
.devcontainer/: devcontainer.json
comodos/: app.py  noticias.py  previsao.py
