[tool.poetry]
name = "comodos"
version = "0.1.0"
description = ""
authors = ["resident2x <guermenunes2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
yfinance = "^0.2.54"
python-dotenv = "^1.0.1"
numpy = "<2.2.0"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
streamlit = "^1.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
