[tool.poetry]
name = "comodos"
version = "0.1.0"
description = "Previsão e análise de notícias sobre commodities"
authors = ["resident2x <guermenunes2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# Web e scraping
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
feedparser = "^6.0.11"

# Dados e Machine Learning
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
yfinance = "^0.2.54"
matplotlib = "^3.8.4"

# PyTorch
torch = "^2.2.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"

# Interface
streamlit = "^1.34.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
